# rust_engine

./: Cargo.toml  build.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: component.rs  entity.rs  lib.rs  query.rs  storage.rs  system.rs  world.rs
crates/ecs_derive/: Cargo.toml
crates/ecs_derive/src/: lib.rs
src/: main.c  main.rs
