[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
]

[dependencies]
ecs = { path = "crates/ecs" }
ecs_derive = { path = "crates/ecs_derive" }

downcast = "0.11.0"